adding Patient id to Treatment